# imageprocess

./: .gitignore  pixels.csv  requirements.txt  setup.cfg
imageprocess/: filter_pixel.py  get_pixel.py
