[metadata]
name = imgprocess
summary = Universal Shared Storage Virtualiztion
description-file =
    README.rst
author = winglq@gmail.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    imageprocess

[entry_points]
console_scripts =
    get_pixel = imageprocess.get_pixel:main
