[metadata]
name = imgprocess
summary = Get pixel from jpg image for zqj
description-file =
    README.rst
author = winglq@gmail.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    imageprocess

[entry_points]
console_scripts =
    getpixels = imageprocess.get_pixel:main
    filterpixels = imageprocess.filter_pixel:main
